Пересортировать проекты портфолио в обратном хронологическом порядке

--- a/portfolio-pages/bellone.html
+++ b/portfolio-pages/bellone.html
@@ -31,7 +31,7 @@
                 <h2>BellOne</h2>
             </div>
             <p>
-                Принимал участие в разработке микро сервисной системы USS в компании ООО "Бэлл Интегратор" http://bellintegrator.ru/.
+                Принимал участие в разработке микро сервисной системы USS в компании <a target="_blank" href="http://bellintegrator.ru/">ООО "Бэлл Интегратор"</a>.
                 Система разворачивалась на серверах AWS. Моя задача была работать над сервисами
                 <strong>upload-service</strong> – сервис предоставлял пользователю производить загрузку файлов в хранилище <strong>AWS S3</strong>,
                 для дальнейшей тренировки нейронной сети, и сервисом <strong>csi-service</strong> – этот сервис агрегирует в себе всю логику
