Обновить файл Резюме - Альпенов Т. М..docx

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 
                 <div class="columns download">
                     <p>
-                        <a href="Резюме%20-%20Альпенов%20Т.%20М..docx0М..docx" class="button"><i class="fa fa-download"></i>Скачать резюме</a>
+                        <a href="Резюме - Альпенов Т. М..docx" class="button"><i class="fa fa-download"></i>Скачать резюме</a>
                     </p>
                 </div>
 
