Добавить ссылку на профиль GitHub

--- a/index.html
+++ b/index.html
@@ -65,11 +65,7 @@
                 <a class="smoothscroll" href="#about">Обо мне</a>.</h3>
             <hr/>
             <ul class="social">
-                <!--<li><a href="#"><i class="fa fa-facebook"></i></a></li>-->
-                <!--<li><a href="#"><i class="fa fa-twitter"></i></a></li>-->
-                <!--<li><a href="#"><i class="fa fa-google-plus"></i></a></li>-->
-                <!--<li><a href="#"><i class="fa fa-instagram"></i></a></li>-->
-                <!--<li><a href="#"><i class="fa fa-dribbble"></i></a></li>-->
+                <li><a target="_blank" href="https://github.com/Researcher86"><i class="fa fa-github"></i></a></li>
                 <li><a target="_blank" href="https://www.linkedin.com/in/researcher2286"><i class="fa fa-linkedin"></i></a></li>
                 <li><a href="skype:alpenov_tanat?chat"><i class="fa fa-skype"></i></a></li>
             </ul>
@@ -275,6 +271,38 @@
 
     </div> <!-- End Work -->
 
+    <div class="row work">
+
+        <div class="three columns header-col">
+            <h1><span>Достижения</span></h1>
+        </div>
+
+        <div class="nine columns main-col">
+
+            <div class="row item">
+                <ul class="disc">
+                    <li>Разработал бесплатную программу "FASM Editor" для себя и сообщества ассемблер программистов. Программу можно бесплатно скачать с сайта
+                        <a target="_blank" href="http://asmworld.ru/">http://asmworld.ru/</a></li>
+                    <li>Разработал информационную систему "Антиплагиат", тем самым университет КИнЭУ сэкономил денежные средства на приобретение аналогичной программы</li>
+                </ul>
+
+                <!--<div class="twelve columns">-->
+
+                    <!--<h3>Костанайский инженерно-экономический университет</h3>-->
+                    <!--<p class="info">Инженер-программист <span>&bull;</span> <em class="date">05.2014 - 10.2016</em></p>-->
+
+                    <!--<p>-->
+                        <!--Разработка ПО внутренней автоматизации предприятия.-->
+                    <!--</p>-->
+
+                <!--</div>-->
+
+            </div> <!-- item end -->
+
+        </div> <!-- main-col end -->
+
+    </div> <!-- End Work -->
+
 
     <!-- Skills
     ----------------------------------------------- -->
@@ -286,17 +314,17 @@
 
         <div class="nine columns main-col">
 
-            <p>
-                Умение проектировать информационные системы, объектные модели, реляционные базы данных.
-                Применение принципов, стилей и паттернов проектирования (SOLID, REST, GRASP, GoF).
-                IntelliJ IDEA, SoapUI, Postman,
-                Java, Spring Boot(core, mvc, security, cloud), JUnit, Mockito, Selenide, Maven, JPA/Hibernate, Flyway,
-                JavaScript, Twitter Bootstrap, JQuery,
-                PostgreSQL, MySQL, Elasticsearch, Cassandra,
-                RabbitMQ,
-                Linux, Docker,
-                Redmine, YouTrack, JIRA, TeamCity, Upsource, Git.
-            </p>
+            <ul class="disc">
+                <li>Умение проектировать ИС, объектные модели, реляционные базы данных</li>
+                <li>Применение принципов, стилей и паттернов (SOLID, REST, GRASP, GoF)</li>
+                <li>IntelliJ IDEA, SoapUI, Postman</li>
+                <li>Java, Spring Boot, JUnit, Mockito, Selenide, Maven, JPA/Hibernate, Flyway</li>
+                <li>PHP, JavaScript, Twitter Bootstrap, JQuery</li>
+                <li>PostgreSQL, MySQL, Elasticsearch, Cassandra</li>
+                <li>RabbitMQ</li>
+                <li>Linux, Docker</li>
+                <li>Redmine, YouTrack, JIRA, TeamCity, Upsource, Git</li>
+            </ul>
 
             <div class="bars">
 
@@ -977,6 +1005,7 @@
         <div class="twelve columns">
 
             <ul class="social-links">
+                <li><a target="_blank" href="https://github.com/Researcher86"><i class="fa fa-github"></i></a></li>
                 <li><a target="_blank" href="https://www.linkedin.com/in/researcher2286"><i class="fa fa-linkedin"></i></a></li>
                 <li><a href="skype:alpenov_tanat?chat"><i class="fa fa-skype"></i></a></li>
             </ul>
