--- a/portfolio-pages/todolist.html
+++ b/portfolio-pages/todolist.html
@@ -66,6 +66,7 @@
             <div class="twelve columns">
 
                 <ul class="social-links">
+                    <li><a target="_blank" href="https://github.com/Researcher86"><i class="fa fa-github"></i></a></li>
                     <li><a target="_blank" href="https://www.linkedin.com/in/researcher2286"><i class="fa fa-linkedin"></i></a></li>
                     <li><a href="skype:alpenov_tanat?chat"><i class="fa fa-skype"></i></a></li>
                 </ul>
