--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 
             <p>
                 Занимаюсь разработкой корпоративных систем на <span class="select">Java</span>, <span class="select">PHP</span>.
-                Моя цель - найти интересную и перспективную работу с возможностью применения и совершенствования моих знаний и умений.
+                Найти интересную и перспективную работу веб-разработчика с возможностью применения и совершенствования моих знаний и умений.
             </p>
             <p>
                 <span class="select">Процесс.</span> Разрабатываю системы монолит/микросервисы с предоставлением <span class="select">REST API</span>,
