--- a/index.html
+++ b/index.html
@@ -317,38 +317,14 @@
             <ul class="disc">
                 <li>Умение проектировать ИС, объектные модели, реляционные базы данных</li>
                 <li>Применение принципов, стилей и паттернов (SOLID, REST, GRASP, GoF)</li>
-                <li>IntelliJ IDEA, SoapUI, Postman</li>
-                <li>Java, Spring Boot, JUnit, Mockito, Selenide, Maven, JPA/Hibernate, Flyway</li>
-                <li>PHP, JavaScript, Twitter Bootstrap, JQuery</li>
+                <li>Java, Spring Boot, Selenide, Maven, JPA/Hibernate, Flyway</li>
+                <li>PHP, Laravel</li>
+                <li>JavaScript, Twitter Bootstrap, JQuery</li>
                 <li>PostgreSQL, MySQL, Elasticsearch, Cassandra</li>
                 <li>RabbitMQ</li>
                 <li>Linux, Docker</li>
                 <li>Redmine, YouTrack, JIRA, TeamCity, Upsource, Git</li>
             </ul>
-
-            <div class="bars">
-
-                <ul class="skills">
-                    <li><span class="bar-expand java"></span><em>Java</em></li>
-                    <li><span class="bar-expand spring-boot"></span><em>Spring Boot</em></li>
-                    <li><span class="bar-expand junit"></span><em>JUnit</em></li>
-                    <li><span class="bar-expand maven"></span><em>Maven</em></li>
-                    <li><span class="bar-expand hibernate"></span><em>JPA/Hibernate</em></li>
-                    <li><span class="bar-expand flyway"></span><em>Flyway</em></li>
-                    <li><span class="bar-expand php"></span><em>php</em></li>
-                    <li><span class="bar-expand bootstrap"></span><em>Twitter Bootstrap</em></li>
-                    <li><span class="bar-expand jquery"></span><em>JQuery</em></li>
-                    <li><span class="bar-expand postgres"></span><em>PostgreSQL</em></li>
-                    <li><span class="bar-expand mysql"></span><em>MySQL</em></li>
-                    <li><span class="bar-expand elasticsearch"></span><em>Elasticsearch</em></li>
-                    <li><span class="bar-expand cassandra"></span><em>Cassandra</em></li>
-                    <li><span class="bar-expand rabbitmq"></span><em>RabbitMQ</em></li>
-                    <li><span class="bar-expand linux"></span><em>Linux</em></li>
-                    <li><span class="bar-expand docker"></span><em>Docker</em></li>
-                    <li><span class="bar-expand git"></span><em>Git</em></li>
-                </ul>
-
-            </div><!-- end skill-bars -->
 
         </div> <!-- main-col end -->
 
