--- a/index.html
+++ b/index.html
@@ -317,10 +317,10 @@
             <ul class="disc">
                 <li>Умение проектировать ИС, объектные модели, реляционные базы данных</li>
                 <li>Применение принципов, стилей и паттернов (SOLID, REST, GRASP, GoF)</li>
-                <li>Java, Spring Boot, Selenide, Maven, JPA/Hibernate, Flyway</li>
-                <li>PHP, Laravel</li>
+                <li>Java 8, Spring Boot, Selenide, Maven, JPA/Hibernate, Flyway</li>
+                <li>PHP 7, Laravel, Composer</li>
                 <li>JavaScript, Twitter Bootstrap, JQuery</li>
-                <li>PostgreSQL, MySQL, Elasticsearch, Cassandra</li>
+                <li>PostgreSQL, MySQL, Redis, Elasticsearch, Cassandra</li>
                 <li>RabbitMQ</li>
                 <li>Linux, Docker</li>
                 <li>Redmine, YouTrack, JIRA, TeamCity, Upsource, Git</li>
