--- a/index.html
+++ b/index.html
@@ -210,8 +210,23 @@
 
                 <div class="twelve columns">
 
+                    <h3>Нью-Йорк, Virtual Health</h3>
+                    <p class="info">Ведущий PHP-разработчик <span>&bull;</span> <em class="date">10.2018 - по настоящее время</em>
+                    </p>
+
+                    <p>
+                        Разработка корпоративных решений для здравоохранения.
+                    </p>
+
+                </div>
+
+            </div> <!-- item end -->
+            <div class="row item">
+
+                <div class="twelve columns">
+
                     <h3>Москва, ООО "Бэлл Интегратор"</h3>
-                    <p class="info">Ведущий Java разработчик <span>&bull;</span> <em class="date">04.2018 - 07.2018</em>
+                    <p class="info">Ведущий Java-разработчик <span>&bull;</span> <em class="date">04.2018 - 07.2018</em>
                     </p>
 
                     <p>
@@ -227,7 +242,7 @@
                 <div class="twelve columns">
 
                     <h3>Екатеринбург, ООО "Пресс Индекс"</h3>
-                    <p class="info">Kotlin разработчик <span>&bull;</span> <em class="date">09.2017 - 03.2018</em></p>
+                    <p class="info">Kotlin-разработчик <span>&bull;</span> <em class="date">09.2017 - 03.2018</em></p>
 
                     <p>
                         Разработка систем агрегации пользовательских данных ЮЛ и ИП.
@@ -242,7 +257,7 @@
                 <div class="twelve columns">
 
                     <h3>Волгоград, ООО "Интегрикс"</h3>
-                    <p class="info">Java разработчик <span>&bull;</span> <em class="date">10.2016 - 08.2017</em></p>
+                    <p class="info">Java-разработчик <span>&bull;</span> <em class="date">10.2016 - 08.2017</em></p>
 
                     <p>
                         Разработка системы электронной очереди.
@@ -318,7 +333,7 @@
                 <li>Умение проектировать ИС, объектные модели, реляционные базы данных</li>
                 <li>Применение принципов, стилей и паттернов (SOLID, REST, GRASP, GoF)</li>
                 <li>Java 8, Spring Boot, Selenide, Maven, JPA/Hibernate, Flyway</li>
-                <li>PHP 7, Laravel, Composer</li>
+                <li>PHP 7, Yii, Laravel, Composer</li>
                 <li>JavaScript, Twitter Bootstrap, JQuery</li>
                 <li>PostgreSQL, MySQL, Redis, Elasticsearch, Cassandra</li>
                 <li>RabbitMQ</li>
