--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 
             <p>
                 Занимаюсь разработкой корпоративных систем на <span class="select">Java</span>, <span class="select">PHP</span>.
-                Найти интересную и перспективную работу веб-разработчика с возможностью применения и совершенствования моих знаний и умений.
+                <span class="select">Цель</span> - найти интересную и перспективную работу веб-разработчика с возможностью применения и совершенствования моих знаний и умений.
             </p>
             <p>
                 <span class="select">Процесс.</span> Разрабатываю системы монолит/микросервисы с предоставлением <span class="select">REST API</span>,
@@ -226,7 +226,7 @@
                 <div class="twelve columns">
 
                     <h3>Москва, ООО "Бэлл Интегратор"</h3>
-                    <p class="info">Ведущий Java-разработчик <span>&bull;</span> <em class="date">04.2018 - 07.2018</em>
+                    <p class="info">Ведущий Java-разработчик <span>&bull;</span> <em class="date">04.2018 - 09.2018</em>
                     </p>
 
                     <p>
