--- a/index.html
+++ b/index.html
@@ -51,8 +51,6 @@
             <li><a class="smoothscroll" href="#about">Обо мне</a></li>
             <li><a class="smoothscroll" href="#resume">Резюме</a></li>
             <li><a class="smoothscroll" href="#portfolio">Портфолио</a></li>
-            <!--<li><a class="smoothscroll" href="#testimonials">Testimonials</a></li>-->
-            <!--<li><a class="smoothscroll" href="#contact">Контакты</a></li>-->
         </ul> <!-- end #nav -->
 
     </nav> <!-- end #nav-wrap -->
@@ -60,7 +58,7 @@
     <div class="row banner">
         <div class="banner-text">
             <h1 class="responsive-headline">Альпенов Танат</h1>
-            <h3>Занимаюсь разработкой корпоративных систем на <span class="select">Java</span>, <span class="select">PHP</span>.
+            <h3>Занимаюсь разработкой корпоративных систем на <span class="select">PHP</span>.
                 <br/>
                 <a class="smoothscroll" href="#about">Обо мне</a>.</h3>
             <hr/>
@@ -96,7 +94,7 @@
             <h2>Обо мне</h2>
 
             <p>
-                Занимаюсь разработкой корпоративных систем на <span class="select">Java</span>, <span class="select">PHP</span>.
+                Занимаюсь разработкой корпоративных систем на <span class="select">PHP</span>.
                 <span class="select">Цель</span> - найти интересную и перспективную работу веб-разработчика с возможностью применения и совершенствования моих знаний и умений.
             </p>
             <p>
@@ -158,16 +156,6 @@
                     <h3>Костанайский социально-технический университет</h3>
                     <p class="info">Магистр, Вычислительная техника и программное обеспечение <span>&bull;</span> <em class="date">2010 - 2012</em></p>
 
-                    <!--<p>-->
-                        <!--Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor.-->
-                        <!--Aenean massa.-->
-                        <!--Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam-->
-                        <!--felis,-->
-                        <!--ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim.-->
-                        <!--Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. Nullam dictum felis eu pede-->
-                        <!--mollis pretium.-->
-                    <!--</p>-->
-
                 </div>
 
             </div> <!-- item end -->
@@ -179,13 +167,6 @@
                     <h3>Костанайский инженерно-педагогический университет </h3>
                     <p class="info">Бакалавр, Вычислительная техника и программное обеспечение <span>&bull;</span> <em class="date">2007 - 2010</em>
                     </p>
-
-                    <!--<p>-->
-                        <!--This is Photoshop's version of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet.-->
-                        <!--Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem-->
-                        <!--nibh id elit. Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi accumsan-->
-                        <!--ipsum velit. Nam nec tellus a odio tincidunt auctor a ornare odio. Sed non mauris vitae erat-->
-                    <!--</p>-->
 
                 </div>
 
@@ -301,17 +282,6 @@
                     <li>Разработал информационную систему "Антиплагиат", тем самым университет КИнЭУ сэкономил денежные средства на приобретение аналогичной программы</li>
                 </ul>
 
-                <!--<div class="twelve columns">-->
-
-                    <!--<h3>Костанайский инженерно-экономический университет</h3>-->
-                    <!--<p class="info">Инженер-программист <span>&bull;</span> <em class="date">05.2014 - 10.2016</em></p>-->
-
-                    <!--<p>-->
-                        <!--Разработка ПО внутренней автоматизации предприятия.-->
-                    <!--</p>-->
-
-                <!--</div>-->
-
             </div> <!-- item end -->
 
         </div> <!-- main-col end -->
@@ -332,13 +302,11 @@
             <ul class="disc">
                 <li>Умение проектировать ИС, объектные модели, реляционные базы данных</li>
                 <li>Применение принципов, стилей и паттернов (SOLID, REST, GRASP, GoF)</li>
-                <li>Java 8, Spring Boot, Selenide, Maven, JPA/Hibernate, Flyway</li>
                 <li>PHP 7, Yii, Laravel, Composer</li>
                 <li>JavaScript, Twitter Bootstrap, JQuery</li>
-                <li>PostgreSQL, MySQL, Redis, Elasticsearch, Cassandra</li>
+                <li>PostgreSQL, MySQL, Redis, Elasticsearch</li>
                 <li>RabbitMQ</li>
-                <li>Linux, Docker</li>
-                <li>Redmine, YouTrack, JIRA, TeamCity, Upsource, Git</li>
+                <li>Linux, Docker, Git</li>
             </ul>
 
         </div> <!-- main-col end -->
