--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                 <span class="select">Процесс.</span> Разрабатываю системы монолит/микросервисы с предоставлением <span class="select">REST API</span>,
                 пользуюсь шаблонами проектирования, использую принципы <span class="select">SOLID</span>,
                 код храню в <span class="select">Git</span>,
-                для хранения данных приложения использую <span class="select">SQL</span> или <span class="select">NoSQL</span> решения.
+                для хранения данных приложения использую <span class="select">SQL</span> и <span class="select">NoSQL</span> решения.
             </p>
             <p>
                 <span class="select">Опыт.</span> Занимаюсь программированием <span class="select">10+</span> лет из них <span class="select">4+</span> года профессионально.
